# esphome-standalone

./: CMakeLists.txt  CMakePresets.txt
